// See README.md for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package tutorial;

import "include/google/protobuf/timestamp.proto";
// [END declaration]

// [START java_declaration]
option java_multiple_files = true;
option java_package = "com.example.tutorial.protos";
option java_outer_classname = "AddressBookProtos";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "Game.Proto";
// [END csharp_declaration]

// [START go_declaration]
option go_package = "github.com/protocolbuffers/protobuf/examples/go/tutorialpb";
// [END go_declaration]

// [START messages]
message BagItem {
  int32 ID = 1;
  int32 Count = 2;
}

message Bag {
  repeated BagItem Items = 1;
}

message Role {
  int32 ID = 1;
  string Name = 2;
  string HeadIcon = 3;

  enum ProfessionalType {
    Magic = 0;
    Warrior = 1;
    Archer = 2;
  }

  ProfessionalType Professional = 4;
  google.protobuf.Timestamp CreateTime = 5;
  Bag ItemBag = 6;
}

message Player {
  int64 ID = 1;
  repeated Role Roles = 2;
}
// [END messages]
